[gd_scene load_steps=3 format=3 uid="uid://qohoq64bw08u"]

[ext_resource type="Script" path="res://UI/inventory_slot.gd" id="1_ih5wy"]
[ext_resource type="Texture2D" uid="uid://c6dgfxbbnmjpb" path="res://icon.svg" id="2_yrdtr"]

[node name="InventorySlot" type="Panel"]
custom_minimum_size = Vector2(84, 84)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ih5wy")

[node name="TextureRect" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_yrdtr")

[node name="StackLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
horizontal_alignment = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="ready" from="." to="." method="_on_ready"]
